--- a/alire.toml
+++ b/alire.toml
@@ -1,10 +1,16 @@
 name = "simple_regex"
 description = "Port of Rob Pike's simple regex from the Practice of Programming."
-version = "0.1.0-dev"
+long_description = '''
+Provides a simple regular expression match function for Latin-1 strings, and
+supports *, ., ^ and $.
+'''
+version = "0.1.0"
+website = "https://github.com/pyjarrett/simple_regex"
 
 authors = ["Paul Jarrett"]
 maintainers = ["Paul Jarrett <jarrett.paul.young@gmail.com>"]
 maintainers-logins = ["pyjarrett"]
+tags = ["regex", "text"]
 
 [build-switches]
 "*".style_checks = "No"
